SERVER-116294 SetClusterParameterCoordinatorDocument crash on upgrade due to new non-optional field missing (#45965)

GitOrigin-RevId: 61f2f7b2d25791e5e340c05f267d6fce106f4c34